# edcloud

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  DESIGN.md  LICENSE  MIGRATION.md  PUBLICATION-READINESS.md  README.md  RUNBOOK.md  SECURITY-REMEDIATION-STATUS.md  SECURITY.md  SETUP.md  edcloud.code-workspace  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
cloud-init/: user-data.yaml
compose/: portainer.yml  vintage-lab.yml
docs/: ARCHITECTURE.md  CLEANUP-WORKFLOW.md  IAM-INSTANCE-ROLE.md  TAILSCALE-CLEANUP.md
edcloud/: __init__.py  aws_check.py  aws_clients.py  backup_policy.py  cleanup.py  cli.py  config.py  discovery.py  ec2.py  iam.py  lifecycle.py  ops_health.py  permissions.py  resource_audit.py  resource_queries.py  snapshot.py  tailscale.py  verify_catalog.py
scripts/: README.md  setup-dotfiles.sh  setup-ssm-tokens.sh
templates/operator/: edc-wrapper.sh  edc.env.example  record-restore-drill.sh  run-reprovision-verify.sh
templates/operator/systemd-user/: edc-monthly-snapshot.service  edc-monthly-snapshot.timer  edc-weekly-snapshot.service  edc-weekly-snapshot.timer  rclone-dropbox.service
tests/: test_aws_check.py  test_backup_policy.py  test_cleanup.py  test_cli.py  test_config.py  test_ec2.py  test_ec2_runtime.py  test_iam.py  test_lifecycle.py  test_ops_health.py  test_permissions.py  test_resource_audit.py  test_snapshot.py  test_stateless_invariant.py  test_tailscale.py
