[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edcloud"
version = "0.1.0"
description = "Personal cloud lab CLI — provision, manage, and access an EC2 instance over Tailscale."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Brad Fiedler"}]

dependencies = [
    "boto3>=1.34",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.8",
    "boto3-stubs[ec2]>=1.34",
]

[project.scripts]
edcloud = "edcloud.cli:main"

[tool.setuptools.packages.find]
include = ["edcloud*"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
